objects/amc__Action__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to link an action to an account. this is required to ensure we can deduct assigned hours for clients.</description>
        <inlineHelpText>Field used to link an action to an account. this is required to ensure we can deduct assigned hours for clients.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MC Actions</relationshipLabel>
        <relationshipName>MC_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Acceptance_Criteria__c</fullName>
        <inlineHelpText>Detailed notes on how this User Story will be evaluated</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Action_Duration__c</fullName>
        <formula>amc__End_Date__c - amc__Start_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days elapsed between the Start and End Date (inclusive)</inlineHelpText>
        <label>Action Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Action_Name__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes relating to the Action</inlineHelpText>
        <label>Action Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Action_Owner_Current_User__c</fullName>
        <formula>IF(amc__Action_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Action Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Action Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Action_Owner_Email_Formula__c</fullName>
        <formula>amc__Action_Owner__r.amc__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Owner Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action_Owner_Email__c</fullName>
        <label>Action Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>amc__Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Role__c.amc__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>You are currently searching for Active Roles. You can widen your search to include Inactive Roles.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Actual_End_Time__c</fullName>
        <description>Used by the Scheduler to plot an end time on the timeline.</description>
        <inlineHelpText>Used by the Scheduler to plot an end time on the timeline.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>amc__Allocation_Variance_Billable__c</fullName>
        <formula>amc__Hours_Scheduled__c - amc__Hours_Allocated_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the difference between Hours Scheduled (Billable) and Hours Allocated (Billable)</inlineHelpText>
        <label>Allocation Variance - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Allocation_Variance_Non_Billable__c</fullName>
        <formula>amc__Hours_Scheduled_Non_Billable__c - amc__Hours_Allocated_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the difference between Hours Scheduled Non Billable and Hours Allocated(Non Billable)</inlineHelpText>
        <label>Allocation Variance - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Allocation_Variance_Total__c</fullName>
        <formula>amc__Total_Hours_Scheduled__c - amc__Total_Hours_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the difference between Total Hours Scheduled and Total Hours Allocated</inlineHelpText>
        <label>Allocation Variance - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__As_a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Persona record that the User Story relates to</inlineHelpText>
        <label>As a</label>
        <referenceTo>amc__Persona__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_End_Date__c</fullName>
        <inlineHelpText>Tracks the original End Date set for this Action</inlineHelpText>
        <label>Baseline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_Start_Date__c</fullName>
        <inlineHelpText>Tracks the original Start Date set for this Action</inlineHelpText>
        <label>Baseline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Benefit__c</fullName>
        <description>Detailed notes on the benefits that will be gained by delivering this Requirement</description>
        <inlineHelpText>Detailed notes on the benefits that will be gained by delivering this Requirement</inlineHelpText>
        <label>Benefit</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <formula>IF(AND(NOT(ISNULL(amc__Hours_Scheduled_Cost__c)),NOT(ISNULL(amc__Hours_Scheduled__c)),amc__Hours_Scheduled__c&gt;0),amc__Hours_Scheduled_Cost__c / amc__Hours_Scheduled__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Billable Hourly Rate, based on Hours Scheduled Value (Billable) / Hours Scheduled – Billable</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Budget_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Budget Item this record relates to</inlineHelpText>
        <label>Budget Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>amc__Budget_Item__c.amc__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Budget_Item__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Card_Size__c</fullName>
        <description>used for persistent size on the whiteboard</description>
        <label>Card Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Complete_Checklist_Items__c</fullName>
        <label>Complete Checklist Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Completion_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether a User has manually overridden the Completion % value. If this field is TRUE, the Completion % will stop being updated automatically when new Time Logs are entered</description>
        <inlineHelpText>Identifies whether a User has manually overridden the Completion % value. If this field is TRUE, the Completion % will stop being updated automatically when new Time Logs are entered</inlineHelpText>
        <label>Completion % Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Completion_Percent__c</fullName>
        <inlineHelpText>Identifies the completion percentage of progress made. This field is updated manually and can be used to adjust the completed billable value and remaining effort</inlineHelpText>
        <label>Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <formula>if(AND(NOT(ISNULL(amc__Hours_Scheduled_Value_Cost__c)),NOT(ISNULL(amc__Total_Hours_Scheduled__c)),amc__Total_Hours_Scheduled__c&gt;0),amc__Hours_Scheduled_Value_Cost__c / amc__Total_Hours_Scheduled__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Cost Hourly Rate, based on Hours Scheduled Value (Cost) / Hours Scheduled – Non Billable</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Custom_Status__c</fullName>
        <description>Add your Custom Status values here, then map the values in the Console.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                    <default>true</default>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Days_Remaining__c</fullName>
        <formula>IF (ISPICKVAL(amc__Status__c, &quot;Complete&quot;) , 0, amc__End_Date__c - Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Dependant_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The action selected here is the Parent in the dependency relationship. (Previously Labelled Dependant Action)</inlineHelpText>
        <label>Parent Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Dependant_Emails_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once dependant actions have been processed and emails sent, this box is updated to prevent future updates.</description>
        <label>Dependant Emails Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__End_Time__c</fullName>
        <formula>IF(NOT(ISNULL(amc__Actual_End_Time__c)),TEXT(amc__Actual_End_Time__c),
IF(LEN(TEXT( VALUE(TEXT(amc__Start_Hour__c)) + FLOOR(amc__Hours_Scheduled__c))) = 1, &apos;0&apos;,&apos;&apos;) &amp;
IF(ISBLANK(TEXT(amc__Start_Hour__c)), &apos;00&apos;, TEXT( VALUE(TEXT(amc__Start_Hour__c)) + FLOOR(amc__Hours_Scheduled__c)))

&amp; &quot;:&quot; &amp;
IF(LEN(TEXT(ROUND( ((VALUE(TEXT(amc__Start_Minute__c))/60) + MOD(amc__Hours_Scheduled__c,1) ) * 60, 0))) = 1, &apos;0&apos;,&apos;&apos;) &amp;
IF(ISBLANK(TEXT(amc__Start_Minute__c)), &apos;00&apos;, TEXT(ROUND( ((VALUE(TEXT(amc__Start_Minute__c))/60) + MOD(amc__Hours_Scheduled__c,1) ) * 60, 0)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Enforce_Dependency_Validation__c</fullName>
        <description>Dependency Trigger logic will only execute if this field evaluates to TRUE.</description>
        <formula>amc__Milestone__r.amc__Project__r.amc__Enforce_Dependency_Validation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforce Dependency Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box to create a standard Calendar Event based on this Action (Note: Can only be used where the Action Owner&apos;s  Project Role record is linked to a User)</inlineHelpText>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity_Indicator__c</fullName>
        <formula>If(amc__Milestone__r.amc__Exclude_from_Billable_Capacity_Indicator__c = TRUE, TRUE, amc__Exclude_from_Billable_Capacity__c)</formula>
        <inlineHelpText>Formula: Identifies if this Action should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page_Indicator__c</fullName>
        <formula>OR(amc__Exclude_from_Client_Page__c,  amc__Milestone__r.amc__Exclude_from_Client_Page__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if this Action should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Daily_Digest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if this Action should be excluded from the Daily Digest</description>
        <inlineHelpText>Identifies if this Action should be excluded from the Daily Digest</inlineHelpText>
        <label>Exclude from Daily Digest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Gantt_Indicator__c</fullName>
        <formula>IF( amc__Milestone__r.amc__Exclude_from_Gantt__c  = TRUE, TRUE, amc__Exclude_from_Gantt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies whether this Action should be hidden from the Gantt Chart.</inlineHelpText>
        <label>Exclude from Gantt Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Action should be hidden from the Gantt Chart</inlineHelpText>
        <label>Exclude from Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler_Indicator__c</fullName>
        <formula>IF(amc__Milestone__r.amc__Exclude_from_Scheduler_Indicator__c = TRUE, TRUE, amc__Exclude_from_Scheduler__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Action is excluded from the Scheduler. If the Action &apos;Exclude from Scheduler&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Milestone &apos;Exclude from Scheduler&apos; Field.</inlineHelpText>
        <label>Exclude from Scheduler Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from the Scheduler</inlineHelpText>
        <label>Exclude from Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Status_Report_Indicator__c</fullName>
        <formula>If(amc__Milestone__r.amc__Exclude_from_Status_Report__c = TRUE, TRUE, amc__Exclude_from_Status_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if this Action should be excluded fro the Project Status Report. Will be TRUE if either Action or parent Milestone is set to TRUE</inlineHelpText>
        <label>Exclude from Status Report Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from the Project Status Report</inlineHelpText>
        <label>Exclude from Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Timesheet_Indicator__c</fullName>
        <formula>IF(amc__Milestone__r.amc__Exclude_from_Timesheet_Indicator__c = TRUE, TRUE, amc__Exclude_from_Timesheet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prevents Checked Actions from Appearing on the Timesheet.</inlineHelpText>
        <label>Exclude from Timesheet Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Timesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents Checked Actions from Appearing on the Timesheet</inlineHelpText>
        <label>Exclude from Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Utilisation_Indicator__c</fullName>
        <formula>IF(amc__Milestone__r.amc__Exclude_from_Utilisation_Indicator__c = TRUE, TRUE, amc__Exclude_from_Utilisation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Action should be excluded from the Role Utilisation Report. If the Action &apos;Exclude from Utilisation&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Milestone &apos;Exclude from Utilisation Indicator&apos; Field</inlineHelpText>
        <label>Exclude from Utilisation Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Utilisation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from the Role Utilisation Report</inlineHelpText>
        <label>Exclude from Utilisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Whiteboard_Indicator__c</fullName>
        <formula>IF(amc__Milestone__r.amc__Exclude_from_Whiteboard_Indicator__c = TRUE, TRUE, amc__Exclude_from_Whiteboard__c)</formula>
        <inlineHelpText>Indicates if this Action should be excluded from the Whiteboard. If the Action &apos;Exclude from Whiteboard&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Milestone &apos;Exclude from Whiteboard Indicator&apos; Field.</inlineHelpText>
        <label>Exclude from Whiteboard Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Whiteboard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action should be excluded from the Whiteboard.</inlineHelpText>
        <label>Exclude from Whiteboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Summary__c</fullName>
        <inlineHelpText>This roll up field summaries the &apos;Cost&apos; of related Time Log records</inlineHelpText>
        <label>Material Costs Completed (Billable)</label>
        <summarizedField>amc__Time_Log__c.amc__Cost__c</summarizedField>
        <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Financial_Tracker__c</fullName>
        <formula>TEXT(amc__Hours_Completed_Non_Billable__c) &amp; TEXT(amc__Hours_Completed_Value_Cost__c) &amp; TEXT(amc__Hours_Remaining_Non_Billable__c) &amp;  TEXT(amc__Hours_Remaining_Value_Cost__c) &amp; TEXT(amc__Hours_Scheduled_Non_Billable__c) &amp; TEXT(amc__Hours_Scheduled_Value_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by the action trigger to update project financials.</inlineHelpText>
        <label>Financial Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Gantt_Collapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates the Action is collapsed on the Gantt</inlineHelpText>
        <label>Gantt Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Gantt_Sort_Order__c</fullName>
        <inlineHelpText>If supplied, determines what order the Action is displayed in the Gantt relative to it&apos;s siblings.</inlineHelpText>
        <label>Gantt Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Gap_From_Parent__c</fullName>
        <inlineHelpText>Automatically calculated number of working days between the parent Action</inlineHelpText>
        <label>Gap From Parent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Has_Dependant_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Action Trigger to mark actions that have dependant child actions that need processing.</description>
        <label>Has Dependant Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Allocated_Billable__c</fullName>
        <inlineHelpText>Identifies the sum of billable hours from related Role Allocation records</inlineHelpText>
        <label>Hours Allocated - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Allocated_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the sum of non billable hours from related Role Allocation records</inlineHelpText>
        <label>Hours Allocated - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Cost__c</fullName>
        <inlineHelpText>This field calculates the completed value (Billable) of this action by multiplying the Hours Completed with the Role&apos;s Hourly Rate. (Previously labelled Hours Completed Cost)</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours completed for this Action
Filtered to include Time Logs where Non Billable Tracker = TRUE AND Approval Status = Approved</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <summarizedField>amc__Time_Log__c.amc__Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>amc__Time_Log__c.amc__Non_Billable_Tracker__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>amc__Time_Log__c.amc__Roll_Up_to_Action__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Value of the Action Costs based on the Total Hours Completed</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed__c</fullName>
        <inlineHelpText>Roll up summary of the Hours Completed on Time Logs. Filtered to include Time Logs where Non Billable Tracker = FALSE AND Approval Status = Approved. (Previously Labelled Hours Completed)</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <summarizedField>amc__Time_Log__c.amc__Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>amc__Time_Log__c.amc__Non_Billable_Tracker__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>amc__Time_Log__c.amc__Roll_Up_to_Action__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Cost__c</fullName>
        <inlineHelpText>This field calculates the remaining value (Billable) of this action by multiplying the Hours Remaining with the Role&apos;s Hourly Rate. (Previously labelled Hours Remaining Cost)</inlineHelpText>
        <label>Hours Remaining Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
        <formula>if(OR( IsPickVal(amc__Status__c, &quot;Complete&quot;), IsPickVal(amc__Status__c, &quot;Cancelled&quot;), amc__Hours_Completed_Non_Billable__c &gt; amc__Hours_Scheduled_Non_Billable__c), 0, amc__Hours_Scheduled_Non_Billable__c - amc__Hours_Completed_Non_Billable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the number of non billable hours remaining for this Action</inlineHelpText>
        <label>Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Remaining Value of the Action Costs based on the Total Hours Remaining</inlineHelpText>
        <label>Hours Remaining Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining__c</fullName>
        <formula>if(OR( IsPickVal(amc__Status__c, &quot;Complete&quot;), IsPickVal(amc__Status__c, &quot;Cancelled&quot;), amc__Hours_Completed__c &gt; amc__Hours_Scheduled__c), 0, amc__Hours_Scheduled__c -  amc__Hours_Completed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Hours Remaining - Billable. (Previously Labelled Hours Remaining)</inlineHelpText>
        <label>Hours Remaining - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Cost__c</fullName>
        <inlineHelpText>This field calculates the Scheduled Cost (Billable) of this action by multiplying the Hours Scheduled with the Role&apos;s Hourly Rate. (Previously labelled Hours Scheduled Cost)</inlineHelpText>
        <label>Hours Scheduled Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours scheduled for this Action</inlineHelpText>
        <label>Hours Scheduled - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Scheduled Value of the Action Costs based on Total Hours Scheduled</inlineHelpText>
        <label>Hours Scheduled Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies the number of Billable hours scheduled for this Action. (Previously labelled Hours Scheduled)</inlineHelpText>
        <label>Hours Scheduled - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__I_want_to__c</fullName>
        <inlineHelpText>A description of what the Persona would like to be able to do</inlineHelpText>
        <label>I want to</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Ignore_Non_Working_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is ticked, the Action can be scheduled on a non-working day</description>
        <inlineHelpText>If this is ticked, the Action can be scheduled on a non-working day</inlineHelpText>
        <label>Ignore Non-Working Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action will be recurring</inlineHelpText>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__KPI_End_Date_Variance__c</fullName>
        <formula>amc__Baseline_End_Date__c - amc__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline End Date - End Date</inlineHelpText>
        <label>KPI: End Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_P_L_Variance__c</fullName>
        <formula>amc__P_L_Scheduled__c - amc__P_L_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates P&amp;L Scheduled - P&amp;L Forecast</inlineHelpText>
        <label>KPI: P&amp;L Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Start_Date_Variance__c</fullName>
        <formula>amc__Baseline_Start_Date__c - amc__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline Start Date - Start Date</inlineHelpText>
        <label>KPI: Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Total_Hours_Variance__c</fullName>
        <formula>amc__Total_Hours_Scheduled__c - (amc__Total_Hours_Completed__c + amc__Total_Hours_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Total Hours Scheduled - (Total Hours Completed + Total Hours Remaining)</inlineHelpText>
        <label>KPI: Total Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Last_Owner_Change__c</fullName>
        <description>Used by trigger to determine actions that should appear in the daily digest</description>
        <label>Last Owner Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amc__Manual_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, denotes child Role Allocation Records are manually allocated.</description>
        <label>Manual Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Completed_Cost__c</fullName>
        <inlineHelpText>Rollup Sum of the Material Cost (Cost) field on all related Time Log records</inlineHelpText>
        <label>Material Costs Completed (Cost)</label>
        <summarizedField>amc__Time_Log__c.amc__Material_Cost_Cost__c</summarizedField>
        <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>